// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bootstrap basic table renders properly 1`] = `
<table
  className="table"
>
  <caption>
    Optional table caption.
  </caption>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap bordered table renders properly 1`] = `
<table
  className="table table-bordered"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap condensed table renders properly 1`] = `
<table
  className="table table-condensed"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap contextual classes table renders properly 1`] = `
<table
  className="table table-condensed"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="active"
    >
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr
      className="success"
    >
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        3
      </td>
      <td
        className=""
      >
        Paul
      </td>
      <td
        className=""
      >
        O’Shannessy
      </td>
      <td
        className=""
      >
        zpao
      </td>
    </tr>
    <tr
      className="warning"
    >
      <td
        className=""
      >
        4
      </td>
      <td
        className=""
      >
        Pete
      </td>
      <td
        className=""
      >
        Hunt
      </td>
      <td
        className=""
      >
        petehunt
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        5
      </td>
      <td
        className=""
      >
        Andrew
      </td>
      <td
        className=""
      >
        Clark
      </td>
      <td
        className=""
      >
        acdlite
      </td>
    </tr>
    <tr
      className="danger"
    >
      <td
        className=""
      >
        6
      </td>
      <td
        className=""
      >
        Nathan
      </td>
      <td
        className=""
      >
        Hunzaker
      </td>
      <td
        className=""
      >
        nhunzaker
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap hover table renders properly 1`] = `
<table
  className="table table-hover"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Bootstrap responsive table renders properly 1`] = `
<div
  className="table-responsive"
>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          className=""
        >
          #
        </th>
        <th
          className=""
        >
          First Name
        </th>
        <th
          className=""
        >
          Last Name
        </th>
        <th
          className=""
        >
          Username
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          className=""
        >
          0
        </td>
        <td
          className=""
        >
          Dan
        </td>
        <td
          className=""
        >
          Abramov
        </td>
        <td
          className=""
        >
          gaearon
        </td>
      </tr>
      <tr>
        <td
          className=""
        >
          1
        </td>
        <td
          className=""
        >
          Sebastian
        </td>
        <td
          className=""
        >
          Markbåge
        </td>
        <td
          className=""
        >
          sebmarkbage
        </td>
      </tr>
      <tr>
        <td
          className=""
        >
          2
        </td>
        <td
          className=""
        >
          Sophie
        </td>
        <td
          className=""
        >
          Alpert
        </td>
        <td
          className=""
        >
          sophiebits
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bootstrap striped table renders properly 1`] = `
<table
  className="table table-striped"
>
  <thead>
    <tr>
      <th
        className=""
      >
        #
      </th>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        0
      </td>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        1
      </td>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        2
      </td>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Mock Client Pagination table renders 1`] = `
<div
  className="container-fluid"
>
  <table
    className="table dataTable table-striped table-bordered table-hover"
    role="grid"
  >
    <thead>
      <tr>
        <th
          aria-label="Vyberte všechny řádky"
          className="table-view-pf-select"
          colSpan={1}
          id="vybrat vše"
          index={0}
          rowSpan={1}
        >
          <label
            className="control-label sr-only"
            htmlFor="vybrat vše"
          >
            Vyberte všechny řádky
          </label>
          <input
            checked={false}
            id="vybrat vše"
            onChange={[Function]}
            type="checkbox"
          />
        </th>
        <th
          aria-label="Name"
          className="sorting_asc sort sort-asc"
          colSpan={1}
          index={1}
          onClick={[Function]}
          rowSpan={1}
        >
          Name
        </th>
        <th
          aria-label="Height"
          className="sorting sort sort-none"
          colSpan={1}
          index={2}
          onClick={[Function]}
          rowSpan={1}
        >
          Height
        </th>
        <th
          aria-label="Eye Color"
          className="sorting sort sort-none"
          colSpan={1}
          index={3}
          onClick={[Function]}
          rowSpan={1}
        >
          Eye Color
        </th>
        <th
          aria-label="Gender"
          className="sorting sort sort-none"
          colSpan={1}
          index={4}
          onClick={[Function]}
          rowSpan={1}
        >
          Gender
        </th>
        <th
          aria-label="Birth Year"
          className="sorting sort sort-none"
          colSpan={1}
          index={5}
          onClick={[Function]}
          rowSpan={1}
        >
          Birth Year
        </th>
        <th
          aria-label="Actions"
          className=""
          colSpan={2}
          index={6}
          rowSpan={1}
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="vybrat0"
          >
            vyberte řádek 0
          </label>
          <input
            checked={false}
            id="vybrat0"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Anakin Skywalker
        </td>
        <td
          className=""
        >
          188
        </td>
        <td
          className=""
        >
          blue
        </td>
        <td
          className=""
        >
          male
        </td>
        <td
          className=""
        >
          41.9BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown  "
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-default"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="vybrat1"
          >
            vyberte řádek 1
          </label>
          <input
            checked={false}
            id="vybrat1"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Beru Whitesun lars
        </td>
        <td
          className=""
        >
          165
        </td>
        <td
          className=""
        >
          blue
        </td>
        <td
          className=""
        >
          female
        </td>
        <td
          className=""
        >
          47BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown  "
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-default"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="vybrat2"
          >
            vyberte řádek 2
          </label>
          <input
            checked={false}
            id="vybrat2"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Biggs Darklighter
        </td>
        <td
          className=""
        >
          183
        </td>
        <td
          className=""
        >
          brown
        </td>
        <td
          className=""
        >
          male
        </td>
        <td
          className=""
        >
          24BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown  "
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-default"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="vybrat3"
          >
            vyberte řádek 3
          </label>
          <input
            checked={false}
            id="vybrat3"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          C-3PO
        </td>
        <td
          className=""
        >
          167
        </td>
        <td
          className=""
        >
          yellow
        </td>
        <td
          className=""
        >
          n/a
        </td>
        <td
          className=""
        >
          112BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown  "
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-default"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="vybrat4"
          >
            vyberte řádek 4
          </label>
          <input
            checked={false}
            id="vybrat4"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Chewbacca
        </td>
        <td
          className=""
        >
          228
        </td>
        <td
          className=""
        >
          blue
        </td>
        <td
          className=""
        >
          male
        </td>
        <td
          className=""
        >
          200BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown  "
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-default"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
      <tr
        className=""
        role="row"
      >
        <td
          className="table-view-pf-select"
        >
          <label
            className="control-label sr-only"
            htmlFor="vybrat5"
          >
            vyberte řádek 5
          </label>
          <input
            checked={false}
            id="vybrat5"
            onChange={[Function]}
            type="checkbox"
          />
        </td>
        <td
          className=""
        >
          Darth Vader
        </td>
        <td
          className=""
        >
          202
        </td>
        <td
          className=""
        >
          yellow
        </td>
        <td
          className=""
        >
          male
        </td>
        <td
          className=""
        >
          41.9BBY
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="table-view-pf-btn"
          >
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Actions
            </button>
          </div>
        </td>
        <td
          className="table-view-pf-actions"
        >
          <div
            className="dropdown-kebab-pf dropdown  "
          >
            <button
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle btn btn-default"
              disabled={false}
              id="myKebab"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              type="button"
            >
              <span
                aria-hidden={true}
                className="fa fa-ellipsis-v"
              />
            </button>
            <ul
              aria-labelledby="myKebab"
              className="dropdown-menu dropdown-menu-right"
              role="menu"
            >
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Another Action
                </a>
              </li>
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Something else here
                </a>
              </li>
              <li
                className="divider"
                onKeyDown={[Function]}
                role="separator"
                style={undefined}
              />
              <li
                className=""
                role="presentation"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                  tabIndex="-1"
                >
                  Separated link
                </a>
              </li>
            </ul>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  <form
    className="content-view-pf-pagination table-view-pf-pagination clearfix "
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <div
        className="dropup pagination-pf-pagesize btn-group"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-default"
          disabled={false}
          id="pagination-row-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          type="button"
        >
          6
           
          <span
            className="caret"
          />
        </button>
        <ul
          aria-labelledby="pagination-row-dropdown"
          className="dropdown-menu"
          role="menu"
        >
          <li
            className="active"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              6
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              10
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              15
            </a>
          </li>
        </ul>
      </div>
      <span>
        per page
      </span>
    </div>
    <div
      className="form-group"
    >
      <span>
        <span
          className="pagination-pf-items-current"
        >
          1
          -
          6
        </span>
         
        of
         
        <span
          className="pagination-pf-items-total"
        >
          20
        </span>
      </span>
      <ul
        className="pagination pagination-pf-back"
      >
        <li
          className="disabled"
        >
          <a
            href="#"
            onClick={[Function]}
            title="First Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-double-left i"
            />
          </a>
        </li>
        <li
          className="disabled"
        >
          <a
            href="#"
            onClick={[Function]}
            title="Previous Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-left i"
            />
          </a>
        </li>
      </ul>
      <label
        className="sr-only control-label"
        htmlFor={undefined}
      >
        Current Page
      </label>
      <input
        className="pagination-pf-page form-control"
        id={undefined}
        onChange={[Function]}
        type="text"
        value={1}
      />
      <span>
         
        of
         
        <span
          className="pagination-pf-pages"
        >
          4
        </span>
      </span>
      <ul
        className="pagination pagination-pf-forward"
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
            title="Next Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-right i"
            />
          </a>
        </li>
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
            title="Last Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-double-right i"
            />
          </a>
        </li>
      </ul>
    </div>
  </form>
</div>
`;

exports[`Mock Server Pagination table renders 1`] = `
<div
  className="container-fluid"
>
  <table
    className="table dataTable table-striped table-bordered table-hover"
    role="grid"
  >
    <thead>
      <tr>
        <th
          aria-label="Select all rows"
          className="table-view-pf-select"
          colSpan={1}
          index={0}
          rowSpan={1}
        >
          <label
            className="control-label sr-only"
            htmlFor="selectAll"
          >
            Select all rows
          </label>
          <input
            checked={true}
            id="selectAll"
            onChange={[Function]}
            type="checkbox"
          />
        </th>
        <th
          aria-label="Name"
          className="sorting_asc"
          colSpan={1}
          index={1}
          onClick={[Function]}
          rowSpan={1}
        >
          Name
        </th>
        <th
          aria-label="Height"
          className="sorting"
          colSpan={1}
          index={2}
          onClick={[Function]}
          rowSpan={1}
        >
          Height
        </th>
        <th
          aria-label="Eye Color"
          className="sorting"
          colSpan={1}
          index={3}
          onClick={[Function]}
          rowSpan={1}
        >
          Eye Color
        </th>
        <th
          aria-label="Gender"
          className="sorting"
          colSpan={1}
          index={4}
          onClick={[Function]}
          rowSpan={1}
        >
          Gender
        </th>
        <th
          aria-label="Birth Year"
          className="sorting"
          colSpan={1}
          index={5}
          onClick={[Function]}
          rowSpan={1}
        >
          Birth Year
        </th>
        <th
          aria-label="Actions"
          className=""
          colSpan={2}
          index={6}
          rowSpan={1}
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <form
    className="content-view-pf-pagination table-view-pf-pagination clearfix "
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <div
        className="dropup pagination-pf-pagesize btn-group"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="dropdown-toggle btn btn-default"
          disabled={false}
          id="pagination-row-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          type="button"
        >
          6
           
          <span
            className="caret"
          />
        </button>
        <ul
          aria-labelledby="pagination-row-dropdown"
          className="dropdown-menu"
          role="menu"
        >
          <li
            className="active"
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              6
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              10
            </a>
          </li>
          <li
            className=""
            role="presentation"
            style={undefined}
          >
            <a
              href="#"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="menuitem"
              tabIndex="-1"
            >
              15
            </a>
          </li>
        </ul>
      </div>
      <span>
        per page
      </span>
    </div>
    <div
      className="form-group"
    >
      <span>
        <span
          className="pagination-pf-items-current"
        >
          1
          -
          0
        </span>
         
        of
         
        <span
          className="pagination-pf-items-total"
        >
          0
        </span>
      </span>
      <ul
        className="pagination pagination-pf-back"
      >
        <li
          className="disabled"
        >
          <a
            href="#"
            onClick={[Function]}
            title="First Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-double-left i"
            />
          </a>
        </li>
        <li
          className="disabled"
        >
          <a
            href="#"
            onClick={[Function]}
            title="Previous Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-left i"
            />
          </a>
        </li>
      </ul>
      <label
        className="sr-only control-label"
        htmlFor={undefined}
      >
        Current Page
      </label>
      <input
        className="pagination-pf-page form-control"
        id={undefined}
        onChange={[Function]}
        type="text"
        value={1}
      />
      <span>
         
        of
         
        <span
          className="pagination-pf-pages"
        >
          0
        </span>
      </span>
      <ul
        className="pagination pagination-pf-forward"
      >
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
            title="Next Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-right i"
            />
          </a>
        </li>
        <li
          className=""
        >
          <a
            href="#"
            onClick={[Function]}
            title="Last Page"
          >
            <span
              aria-hidden={true}
              className="fa fa-angle-double-right i"
            />
          </a>
        </li>
      </ul>
    </div>
  </form>
</div>
`;

exports[`Patternfly table renders properly 1`] = `
<table
  className="table table-striped table-bordered table-hover"
>
  <thead>
    <tr>
      <th
        className=""
      >
        First Name
      </th>
      <th
        className=""
      >
        Last Name
      </th>
      <th
        className=""
      >
        Username
      </th>
      <th
        className="text-right"
      >
        Commits
      </th>
      <th
        className="text-right"
      >
        Additions
      </th>
      <th
        className="text-center"
      >
        Location
      </th>
      <th
        className=""
      >
        Gender
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className=""
      >
        Dan
      </td>
      <td
        className=""
      >
        Abramov
      </td>
      <td
        className=""
      >
        gaearon
      </td>
      <td
        className="text-right"
      >
        711
      </td>
      <td
        className="text-right"
      >
        272635
      </td>
      <td
        className="text-center"
      >
        London, UK
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Sebastian
      </td>
      <td
        className=""
      >
        Markbåge
      </td>
      <td
        className=""
      >
        sebmarkbage
      </td>
      <td
        className="text-right"
      >
        476
      </td>
      <td
        className="text-right"
      >
        203610
      </td>
      <td
        className="text-center"
      >
        San Francisco, CA
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Sophie
      </td>
      <td
        className=""
      >
        Alpert
      </td>
      <td
        className=""
      >
        sophiebits
      </td>
      <td
        className="text-right"
      >
        828
      </td>
      <td
        className="text-right"
      >
        114467
      </td>
      <td
        className="text-center"
      >
        California
      </td>
      <td
        className=""
      >
        female
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Paul
      </td>
      <td
        className=""
      >
        O’Shannessy
      </td>
      <td
        className=""
      >
        zpao
      </td>
      <td
        className="text-right"
      >
        820
      </td>
      <td
        className="text-right"
      >
        87324
      </td>
      <td
        className="text-center"
      >
        Seattle, WA
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Pete
      </td>
      <td
        className=""
      >
        Hunt
      </td>
      <td
        className=""
      >
        petehunt
      </td>
      <td
        className="text-right"
      >
        205
      </td>
      <td
        className="text-right"
      >
        86685
      </td>
      <td
        className="text-center"
      >
        San Francisco, CA
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Andrew
      </td>
      <td
        className=""
      >
        Clark
      </td>
      <td
        className=""
      >
        acdlite
      </td>
      <td
        className="text-right"
      >
        320
      </td>
      <td
        className="text-right"
      >
        74162
      </td>
      <td
        className="text-center"
      >
        Redwood City, CA
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
    <tr>
      <td
        className=""
      >
        Nathan
      </td>
      <td
        className=""
      >
        Hunzaker
      </td>
      <td
        className=""
      >
        nhunzaker
      </td>
      <td
        className="text-right"
      >
        77
      </td>
      <td
        className="text-right"
      >
        34504
      </td>
      <td
        className="text-center"
      >
        Durham, NC
      </td>
      <td
        className=""
      >
        male
      </td>
    </tr>
  </tbody>
</table>
`;
